<resources>
    <string name="app_name">CardMatchingGame</string>
    <string name="nickname">NickName</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="image_view_person">image_view_person</string>
    <string name="dummy_string_score">Score : 0 HighScore : 0</string>
    <string name="play">PLAY</string>
    <string name="leaders">LEADERS</string>
    <string name="leaders_small">Leaders</string>
    <string name="imageView_back">imageView Back</string>
    <string name="score">score</string>
    <string name="dummy_time">Time : 03:00</string>
    <string name="dummy_score">Score : 0</string>
</resources>
