<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutHeader"
        android:layout_width="@dimen/margin_match_constraint"
        android:layout_height="@dimen/margin_200"
        android:background="@color/color_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewUser"
            android:layout_width="@dimen/margin_60"
            android:layout_height="@dimen/margin_60"
            android:layout_marginBottom="@dimen/margin_50"
            android:background="@drawable/circle"
            android:contentDescription="@string/image_view_person"
            android:src="@drawable/ic_person"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewNickName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/nickname"
            android:textSize="@dimen/text_size_21"
            app:layout_constraintEnd_toEndOf="@id/imageViewUser"
            app:layout_constraintStart_toStartOf="@id/imageViewUser"
            app:layout_constraintTop_toBottomOf="@id/imageViewUser" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/dummy_string_score"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintEnd_toEndOf="@id/textViewNickName"
            app:layout_constraintStart_toStartOf="@id/textViewNickName"
            app:layout_constraintTop_toBottomOf="@id/textViewNickName" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/margin_match_constraint"
        android:layout_height="@dimen/margin_match_constraint"
        android:background="@color/color_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayoutHeader">

        <Button
            android:id="@+id/buttonPlay"
            android:layout_width="@dimen/margin_150"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:text="@string/play"
            android:textColor="@color/color_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonLeaders"
            android:layout_width="@dimen/margin_match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/leaders"
            android:textColor="@color/color_button_text"
            app:layout_constraintEnd_toEndOf="@id/buttonPlay"
            app:layout_constraintStart_toStartOf="@id/buttonPlay"
            app:layout_constraintTop_toBottomOf="@id/buttonPlay" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
