<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/margin_60"
    android:background="@color/color_white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_4"
        android:background="@color/color_grey">


        <ImageView
            android:layout_width="@dimen/margin_40"
            android:layout_height="@dimen/margin_40"
            android:layout_marginStart="@dimen/margin_8"
            android:id="@+id/imageViewPerson"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/circle"
            android:src="@drawable/ic_person"
            android:contentDescription="@string/image_view_person" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/color_green"
            android:layout_marginStart="@dimen/margin_16"
            app:layout_constraintStart_toEndOf="@id/imageViewPerson"
            app:layout_constraintTop_toTopOf="@id/imageViewPerson"
            app:layout_constraintBottom_toBottomOf="@id/imageViewPerson"
            android:id="@+id/textViewNickName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewScore"
            android:textColor="@color/color_green"
            android:textSize="@dimen/text_size_18"
            android:text="@string/score"
            android:layout_marginEnd="@dimen/margin_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageViewPerson"
            app:layout_constraintBottom_toBottomOf="@id/imageViewPerson"/>


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
