<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="registerViewModel"
            type="com.example.cardmatchinggame.viewmodel.RegisterViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutHeader"
            android:layout_width="@dimen/margin_match_constraint"
            android:layout_height="@dimen/margin_80"
            android:background="@color/color_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutPersonalInfo"
            android:layout_width="@dimen/margin_match_constraint"
            android:layout_height="@dimen/margin_match_constraint"
            android:background="@color/color_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintLayoutHeader">


            <EditText
                android:id="@+id/editTextNickName"
                android:layout_width="@dimen/margin_match_constraint"
                android:layout_height="@dimen/margin_40"
                android:layout_margin="@dimen/margin_8"
                android:background="@color/color_white"
                android:hint="@string/nickname"
                android:inputType="text"
                android:text="@={registerViewModel.nickname}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="@dimen/margin_match_constraint"
                android:layout_height="@dimen/margin_40"
                android:layout_marginTop="@dimen/margin_8"
                android:background="@color/color_white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={registerViewModel.password}"
                app:layout_constraintEnd_toEndOf="@id/editTextNickName"
                app:layout_constraintStart_toStartOf="@id/editTextNickName"
                app:layout_constraintTop_toBottomOf="@id/editTextNickName" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_16"
                android:text="@string/register"
                android:textColor="@color/color_white"
                android:onClick="@{registerViewModel::onClickRegister}"
                android:textSize="@dimen/text_size_21"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/editTextPassword"
                app:layout_constraintStart_toStartOf="@id/editTextPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:layout_width="@dimen/margin_60"
            android:layout_height="@dimen/margin_60"
            android:background="@drawable/circle"
            android:contentDescription="@string/image_view_person"
            android:src="@drawable/ic_person"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayoutPersonalInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintLayoutHeader" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>